--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,3 @@
-/* 
-const initialItems = [
-  { id: 1, description: "Passports", quantity: 2, packed: false },
-  { id: 2, description: "Socks", quantity: 12, packed: false },
-];
-*/
-
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
 * {
@@ -32,7 +25,7 @@ body {
   grid-template-rows: auto auto 1fr auto;
 }
 
- h1 {
+h1 {
   text-align: center;
   background-color: #f4a226;
   font-family: "Monoton";
@@ -44,6 +37,20 @@ body {
   padding: 2.4rem 0;
 }
 
+@media (max-width: 600px) {
+  h1 {
+    font-size: 3rem;
+    letter-spacing: -3px;
+    padding: 1.4rem 0;
+  }
+  .add-form {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 1.8rem 0;
+    background-color: #e5771f;
+  }
+}
+
 .add-form {
   background-color: #e5771f;
   padding: 2.8rem 0;
@@ -51,6 +58,16 @@ body {
   align-items: center;
   justify-content: center;
   gap: 0.8rem;
+}
+
+@media (max-width: 600px) {
+  .add-form {
+    background-color: #e5771f;
+    padding: 1.8rem 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.8rem;
+  }
 }
 
 h3 {
@@ -72,12 +89,23 @@ input {
   cursor: pointer;
 }
 
+@media (max-width: 600px) {
+  button,
+  select,
+  input {
+    font-size: 1.4rem;
+    padding: 0.2rem 1.5rem;
+    justify-items: center;
+  }
+}
+
 .add-form button {
   text-transform: uppercase;
   background-color: #76c7ad;
 }
 
 .list {
+  width: 100vw;
   background-color: #5a3e2b;
   color: #ffebb3;
   padding: 4rem 0;
@@ -89,14 +117,43 @@ input {
   align-items: center;
 }
 
+@media (max-width: 600px) {
+  .list {
+    width: 100vw;
+    position: relative;
+    font-size: 2rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    flex-direction: row;
+    gap: 1.2rem;
+  }
+}
+
 .actions button,
 .list select {
+  display: flex;
   text-transform: uppercase;
+  display: inline-block;
+  position: absolute;
+  bottom: 2rem;
   padding: 0.8rem 2.4rem;
   font-size: 1.4rem;
   font-weight: 700;
-  margin: 0 0.8rem;
- 
+  padding: 0, 2rem;
+}
+
+@media (max-width: 600px) {
+  .actions button,
+  .list select {
+    padding: 0.8rem 1.4rem;
+    display: inline-block;
+    position: absolute;
+    bottom: 2rem;
+    left: 50%;
+    align-items: center;
+    justify-content: center;
+  }
 }
 
 .list ul {
